--- a/SeedlingOnlineJudge/SeedlingOnlineJudge/SeedlingOnlineJudge.csproj
+++ b/SeedlingOnlineJudge/SeedlingOnlineJudge/SeedlingOnlineJudge.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="datas\io\" />
+  </ItemGroup>
+
 </Project>
