--- a/SeedlingOnlineJudge/SeedlingOnlineJudge/SeedlingOnlineJudge.csproj
+++ b/SeedlingOnlineJudge/SeedlingOnlineJudge/SeedlingOnlineJudge.csproj
@@ -5,12 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="datas\io\**" />
+    <Content Remove="datas\io\**" />
+    <EmbeddedResource Remove="datas\io\**" />
+    <None Remove="datas\io\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="datas\io\" />
+    <Folder Include="datas\problemdescription\" />
   </ItemGroup>
 
 </Project>
