--- a/.gitignore
+++ b/.gitignore
@@ -14,16 +14,16 @@ project.lock.json
 *.sln.docstates
 
 # Build results
-SeedlingOnlineJudge/SeedlingOnlineJudge/[Dd]ebug/
-SeedlingOnlineJudge/SeedlingOnlineJudge/[Dd]ebugPublic/
-SeedlingOnlineJudge/SeedlingOnlineJudge/[Rr]elease/
-SeedlingOnlineJudge/SeedlingOnlineJudge/[Rr]eleases/
+SeedlingOnlineJudge/SeedlingOnlineJudge/Debug/
+SeedlingOnlineJudge/SeedlingOnlineJudge/DebugPublic/
+SeedlingOnlineJudge/SeedlingOnlineJudge/Release/
+SeedlingOnlineJudge/SeedlingOnlineJudge/Releases/
 SeedlingOnlineJudge/SeedlingOnlineJudge/x64/
 SeedlingOnlineJudge/SeedlingOnlineJudge/x86/
 SeedlingOnlineJudge/SeedlingOnlineJudge/build/
 SeedlingOnlineJudge/SeedlingOnlineJudge/bld/
-SeedlingOnlineJudge/SeedlingOnlineJudge/[Bb]in/
-SeedlingOnlineJudge/SeedlingOnlineJudge/[Oo]bj/
+SeedlingOnlineJudge/SeedlingOnlineJudge/bin/
+SeedlingOnlineJudge/SeedlingOnlineJudge/obj/
 SeedlingOnlineJudge/SeedlingOnlineJudge/msbuild.log
 SeedlingOnlineJudge/SeedlingOnlineJudge/msbuild.err
 SeedlingOnlineJudge/SeedlingOnlineJudge/msbuild.wrn
